add 'overview' view

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,43 +48,63 @@
       <div class="col-sm-4">
         <span class="fa-stack fa-5x">
 
+
+
           <i class="fa fa-circle fa-stack-2x wsBlue"></i>
 
+
+
           <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
+
+
 
         </span>
         <h2>Prevent Downtime with Mobile Alerts</h2>
         <span class="lead">
+
           <p><em>"Winsitter alerted me about my hard drive filling up on a criticial server.
+
             I was able to tame a runaway process."</em></p>
+
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/1828958563/me_normal.jpg" />
+
           <footer>Michael Carter - <a href="https://twitter.com/kiliman">@kiliman</a></footer>
+
         </span>
 
       </div>
 
       <div class="col-sm-4">
         <span class="fa-stack fa-5x">
+
           <i class="fa fa-windows fa-2x colorOfWindows"></i>
+
         </span>
         <h2>Sleep Better Knowing You're Covered</h2>
-        <p class="lead">Imagine you're at dinner and the office help desk calls.
-          Users can't get to webmail without seeing a warning screen.</p>
+        <p class="lead">Imagine you're at dinner and the office help desk calls. Users can't get to webmail without seeing a warning screen.</p>
         <p class="lead">You discover your web mail server certificate expired.
           <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
       </div>
 
       <div class="col-sm-4">
         <span class="fa-stack fa-5x">
+
           <i class="fa fa-circle fa-stack-2x wsBlue"></i>
+
           <i class="fa fa-ambulance fa-stack-1x fa-inverse"></i>
+
         </span>
         <h2>Windows Server Monitoring-as-a-Service</h2>
         <span class="lead">
+
           <p><em>"Winsitter is pretty cool! The notification emails are going to be
+
             really great for my team! Can&#39;t wait to see what is added."</em></p>
+
           <img class="twitterPicture" src="https://pbs.twimg.com/profile_images/378800000531450136/558b2c7713426da501570b9fb16d0fed_normal.jpeg" />
+
           <footer>Grant Goodart - <a href="https://twitter.com/grantg81">@grantg81</a></footer>
+
         </span>
       </div>
       <!-- /.col-lg-4 -->
@@ -134,7 +154,15 @@
         </p>
       </div>
     </div>
+    <hr class="featurette-divider">
 
+    <div class="row featuretee">
+      <div class="col-sm-12 col-md-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="//player.vimeo.com/video/107543966?byline=0&amp;portrait=0" width="500" height="281" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
 
     <hr class="featurette-divider">
 
@@ -183,8 +211,7 @@
       <div class="col-sm-7 col-sm-pull-5">
         <!-- <h2 class="featurette-heading">No additional infrastructure needed <span class="text-muted"> for monitoring</span></h2> -->
         <p class="lead">
-          We created Winsitter in a way that removes the complexity of server monitoring and enabling mobile alerts.
-          Anyone can signup, easily install the agent, and sleep better knowing they’ll be notified of issues.
+          We created Winsitter in a way that removes the complexity of server monitoring and enabling mobile alerts. Anyone can signup, easily install the agent, and sleep better knowing they’ll be notified of issues.
           <br />
           <span><i class="fa fa-thumbs-up fa-2x wsBlue"></i> No extra servers required.</span>
           <br />
@@ -237,9 +264,7 @@
           <strong>CEO and Sysadmin</strong>
           <br>
           <p>
-            Believes Windows Servers deserve better tools for monitoring.
-            Nearly 30 Microsoft certs, and 20 years of managing Windows.
-            Remembers good ol' days of EMM386.EXE, but doesn't miss them.
+            Believes Windows Servers deserve better tools for monitoring. Nearly 30 Microsoft certs, and 20 years of managing Windows. Remembers good ol' days of EMM386.EXE, but doesn't miss them.
           </p>
           <a href="https://twitter.com/BretFisher" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @BretFisher</a>
         </div>
@@ -249,9 +274,7 @@
           <strong>CTO and Lead Developer</strong>
           <br>
           <p>
-            Microsoft MVP, trainer, and conference speaker.
-            User Group Leader. Loves .NET along with Node.js and Open Source.
-            Kills code bugs with bacon.
+            Microsoft MVP, trainer, and conference speaker. User Group Leader. Loves .NET along with Node.js and Open Source. Kills code bugs with bacon.
           </p>
           <a href="https://twitter.com/1kevgriff" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @1kevgriff</a>
         </div>
@@ -263,6 +286,7 @@
           <p>
             Our mascott, and always-dilligent alert robot. Likes
             <a href="https://www.google.com/search?site=imghp&tbm=isch&q=ship+it+squirrel" title="Google Search of Squirrels">
+
               "Ship It" squirrels</a>. Dreams of being a real boy.
           </p>
           <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
