twitter ad tracking

--- a/templates/index.html
+++ b/templates/index.html
@@ -298,7 +298,7 @@
   <!-- /.container -->
 
   {{> footer}}
-
+  <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=l4yno&p_id=Twitter" />
 </body>
 
 </html>
