--- a/templates/index.html
+++ b/templates/index.html
@@ -298,7 +298,15 @@
   <!-- /.container -->
 
   {{> footer}}
+  <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+  <script type="text/javascript">
+twttr.conversion.trackPid('l4yno');
+</script>
+<noscript>
   <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=l4yno&p_id=Twitter" />
-</body>
+  <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=l4yno&p_id=Twitter" />
+  </noscript>
+  
+  </body>
 
 </html>
