updated faq. corrected some links.

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,10 +184,10 @@
           <br/>
           <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> Unusual Memory and CPU Utilization</span>
           <br/>
-          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> and MORE!</span>
+          <span><i class="fa fa-check-circle-o fa-2x wsOrange"></i> and <a href="/features">MORE!</a></span>
           <br/>
           <br/>
-          <small>Interested in bulk pricing?  <a href="/support">Contact Us</a></small>
+          <small>Interested in volume pricing, reselling, or MSP?  <a href="/support">Contact Us</a></small>
         </p>
         <p>
           <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
@@ -306,7 +306,7 @@ twttr.conversion.trackPid('l4yno');
   <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=l4yno&p_id=Twitter" />
   <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=l4yno&p_id=Twitter" />
   </noscript>
-  
+
   </body>
 
 </html>
