--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,9 +8,8 @@
         <p>
           <a href="/">Home</a><br/>
           <a href="/#pricing">Pricing</a><br/>
+          <a href="/features">Features</a><br/>
           <a href="/#about-us">About Us</a><br/>
-          <a href="/blog">Blog</a><br/>
-          <a href="/support">Support</a><br/>
         </p>
       </div>
 
@@ -26,8 +25,9 @@
       <div class="col-sm-4">
         <h3>Contact Us</h3>
         <p>
-          <a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i> @winsitter on Twitter</a><br/>
-          <a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i> Winsitter on Facebook</a><br/>
+          <a href="/support">Support</a><br/>
+          <a href="https://twitter.com/winsitter"><i class="fa fa-twitter fa-lg"></i> Twitter</a><br/>
+          <a href="https://facebook.com/winsitter"><i class="fa fa-facebook fa-lg"></i> Facebook</a><br/>
           &copy; Winsitter, Inc.
         </p>
       </div>
