--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -19,7 +19,7 @@
 }
 #header_inner {
   background-image: url(/images/top_2.png);
-  /*background-size: 100%;*/
+  background-size: 100%;
   background-position: bottom;
   background-repeat: no-repeat;
   height: 425px;
@@ -138,7 +138,7 @@
 @media (min-width: 768px) {
   #header_inner {
     background-image: url(/images/top_2.png);
-    /*background-size: 100%;*/
+    background-size: auto;
     background-position: right;
     background-repeat: no-repeat;
     height: 450px;
@@ -200,7 +200,7 @@
 
 @media (min-width: 1200px) {
   #header_inner {
-    /*background-size: 80%;*/
+    /*background-size: auto;*/
     /*height: 700px;*/
   }
 }
