Now With More Awesome, see README.md

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,9 @@
 
         </span>
         <h2>Sleep Better Knowing You're Covered</h2>
-        <p class="lead">Imagine you're at dinner and the office help desk calls. Users can't get to webmail without seeing a warning screen.</p>
-        <p class="lead">You discover your web mail server certificate expired.
-          <b>Winsitter could have alerted in advance</b> and prevented a late night outage.</p>
+        <p class="lead">Get alerts before issues arise.</p>
+        <p class="lead">Disk space nearing full or SSL certificates about to expire?
+          <b>Winsitter will alert in advance</b> and help you prevent the outage.</p>
       </div>
 
       <div class="col-sm-4">
@@ -148,7 +148,6 @@
     <br />
     <div class="row">
       <div class="col-md-4">
-        <span id="pricing">&nbsp;</span>
         <p>
           <a id="btnSignUp" href="https://dashboard.winsitter.com/signup" role="button" onclick="trackOutboundLink('https://dashboard.winsitter.com/signup'); return false;">Signup for a Free Trial!</a>
         </p>
@@ -164,7 +163,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider" id="pricing">
 
     <div class="row featurette">
       <!-- <div class="col-sm-5">
@@ -228,8 +227,6 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
-
     <!-- <div class="row featurette" id="pricing">
       <div class="col-sm-7">
         <h2 class="featurette-heading">Pricing</h2>
@@ -250,49 +247,50 @@
     <hr class="featurette-divider"> -->
 
     <!-- /END THE FEATURETTES -->
+    
+    <hr class="featurette-divider" id="about">
 
-    <div id="about" class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <h2>About Us</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="https://www.gravatar.com/avatar/53dc2db8d7a7e643d9a1fbefe15c9f42?s=150" class="img-circle img-thumbnail" />
-          <h3>Bret Fisher</h3>
-          <strong>CEO and Sysadmin</strong>
-          <br>
-          <p>
-            Believes Windows Servers deserve better tools for monitoring. Nearly 30 Microsoft certs, and 20 years of managing Windows. Remembers good ol' days of EMM386.EXE, but doesn't miss them.
-          </p>
-          <a href="https://twitter.com/BretFisher" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @BretFisher</a>
-        </div>
-        <div class="col-sm-4">
-          <img src="https://www.gravatar.com/avatar/821840a87c343cf8073dc5f5ce289cbd?s=150" class="img-circle img-thumbnail" />
-          <h3>Kevin Griffin</h3>
-          <strong>CTO and Lead Developer</strong>
-          <br>
-          <p>
-            Microsoft MVP, trainer, and conference speaker. User Group Leader. Loves .NET along with Node.js and Open Source. Kills code bugs with bacon.
-          </p>
-          <a href="https://twitter.com/1kevgriff" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @1kevgriff</a>
-        </div>
-        <div class="col-sm-4">
-          <img src="https://www.gravatar.com/avatar/da5e4f42f7924b08916f814825321220?s=150" class="img-circle img-thumbnail" />
-          <h3>Joe The Man</h3>
-          <strong>Chief Monitor</strong>
-          <br>
-          <p>
-            Our mascott, and always-dilligent alert robot. Likes
-            <a href="https://www.google.com/search?site=imghp&tbm=isch&q=ship+it+squirrel" title="Google Search of Squirrels">
-
-              "Ship It" squirrels</a>. Dreams of being a real boy.
-          </p>
-          <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
-        </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <h2>About Us</h2>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="https://www.gravatar.com/avatar/53dc2db8d7a7e643d9a1fbefe15c9f42?s=150" class="img-circle img-thumbnail" />
+        <h3>Bret Fisher</h3>
+        <strong>CEO and Sysadmin</strong>
+        <br>
+        <p>
+          Believes Windows Servers deserve better tools for monitoring. Nearly 30 Microsoft certs, and 20 years of managing Windows. Remembers good ol' days of EMM386.EXE, but doesn't miss them.
+        </p>
+        <a href="https://twitter.com/BretFisher" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @BretFisher</a>
+      </div>
+      <div class="col-sm-4">
+        <img src="https://www.gravatar.com/avatar/821840a87c343cf8073dc5f5ce289cbd?s=150" class="img-circle img-thumbnail" />
+        <h3>Kevin Griffin</h3>
+        <strong>CTO and Lead Developer</strong>
+        <br>
+        <p>
+          Microsoft MVP, trainer, and conference speaker. User Group Leader. Loves .NET along with Node.js and Open Source. Kills code bugs with bacon.
+        </p>
+        <a href="https://twitter.com/1kevgriff" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @1kevgriff</a>
+      </div>
+      <div class="col-sm-4">
+        <img src="https://www.gravatar.com/avatar/da5e4f42f7924b08916f814825321220?s=150" class="img-circle img-thumbnail" />
+        <h3>Joe The Man</h3>
+        <strong>Chief Monitor</strong>
+        <br>
+        <p>
+          Our mascott, and always-dilligent alert robot. Likes
+          <a href="https://www.google.com/search?site=imghp&tbm=isch&q=ship+it+squirrel" title="Google Search of Squirrels">
+
+            "Ship It" squirrels</a>. Dreams of being a real boy.
+        </p>
+        <a href="https://twitter.com/winsitter" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @winsitter</a>
+      </div>
+    </div>
+
 
   </div>
   <!-- /.container -->
