new posts, adding sumome

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -24,7 +24,7 @@
               <a href="/{{this.path}}">
                 {{this.title}}</a>
             </h2>
-            <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
+            <p class="blog-post-meta">By {{this.author}}</p>
             {{{this.contents}}}
           </div><!-- /.blog-post -->
         {{/each}}
