--- a/templates/header.html
+++ b/templates/header.html
@@ -48,4 +48,5 @@
        });
     }
   </script>
+  <script src="//load.sumome.com/" data-sumo-site-id="1d03c95a7deaa4881e876d5d2aa687f5bfbad12e49a7f88f8481d8a649b1c84c" async></script>
 </head>
