--- a/templates/post.html
+++ b/templates/post.html
@@ -7,12 +7,6 @@
 
   <div class="container my-container">
 
-    <div class="blog-header">
-      <h1 class="blog-title">The Heartbeat Blog</h1>
-      <p class="lead blog-description">
-        Winsitter updates; Sysadmin discussions.</p>
-    </div>
-
     <div class="row">
 
       <div class="col-sm-8 blog-main">
@@ -26,7 +20,7 @@
               {{this.title}}</a>
 
           </h2>
-          <p class="blog-post-meta">{{this.date}} by {{this.author}}</p>
+          <p class="blog-post-meta">By {{this.author}}</p>
           {{{this.contents}}}
         </div>
         <!-- /.blog-post -->
@@ -37,8 +31,8 @@
 
       <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
         <div class="sidebar-module sidebar-module-inset">
-          <h4>About</h4>
-          <p>Winsitter blog about our product, server monitoring, and sysadmin life</p>
+          <h4>The Heartbeat Blog</h4>
+          <p>The Winsitter blog about our product, server monitoring, and sysadmin/devops life</p>
         </div>
         <!-- <div class="sidebar-module">
           <h4>Archives</h4>
